Map on tablet fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -441,11 +441,6 @@ h3 {
         height: 40px;
     }
 
-    .map {
-        height: 400px; 
-        width: 560px; 
-    }
-
     /* Hero section */
     .section-hero {
         height: 300px;
